# pcl-icp

./: CMakeLists.txt  av.m  icp_algo.cpp  logger.py  snd-grf.m  splot.m
data/: face_points.csv  face_points.txt  logger.py  run_rosbag.sh  sound_points.csv  sound_points.txt
